chrome flickering on scale fix

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center; }
+    .about__description p {
+      animation: fadeIn 0.5s ease-in-out; }
     .about__description span.highlight {
       color: #f4be72;
       text-transform: uppercase; }
@@ -29,6 +31,7 @@
   margin-bottom: 0.4rem;
   font-weight: 500;
   text-transform: uppercase;
+  animation: fadeIn 0.5s ease-in-out;
   padding: 0.4rem 1rem;
   background: #555;
   color: #fdfdfd; }
@@ -41,7 +44,8 @@
 
 .skills__list {
   list-style: none;
-  margin-left: 3.5rem; }
+  margin-left: 3.5rem;
+  animation: fadeIn 0.5s ease-in-out; }
 
 .skills__item {
   display: flex;
@@ -51,6 +55,20 @@
   .skills__item i {
     font-size: 1.4rem;
     margin-right: 0.8rem; }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opactiy: 1; } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opactiy: 1;
+    transform: translate(0); } }
 
 *,
 *::before,
@@ -118,7 +136,8 @@ h1.section-heading {
 .hero {
   height: 60vh;
   position: relative;
-  color: #444140; }
+  color: #444140;
+  animation: fadeIn 0.8s ease-out; }
   .hero header {
     padding: 2rem 4rem;
     display: flex;
@@ -170,7 +189,9 @@ h1.section-heading {
   .projects .project__img {
     max-width: 420px;
     overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08); }
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: perspective(1000px); }
     .projects .project__img img {
       display: block;
       width: 100%;
