--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,6 +2,7 @@
   height: 60vh;
   position: relative;
   color: $color-black-2;
+  animation: fadeIn 0.8s ease-out;
 
   header {
     padding: 2rem 4rem;
